[package]
name = "gridow_web"
version = "0.1.0"
edition = "2021"
description = "格物（Gridow）物品管理后台服务"

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tower = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
multer = "3"
thiserror = "2"
bcrypt = "0.15"
jsonwebtoken = "9"
rand = "0.8"
image = "0.25"
bytes = "1"
md-5 = "0.10"
